KAFKA-14405: Log a warning when users attempt to set a config controlled by Streams (#22586)
Kafka Streams assigns some of the underlying consumer and producer
configs itself and silently ignored a user-supplied value for them, so
there was no way to tell that the setting had no effect. Two unrelated
mechanisms did this: a checker driven by the `NON_CONFIGURABLE_*` arrays
that inspected the prefix-extracted user properties, and direct `put()`
calls applied after those properties were merged, which warned about
nothing at all.

Replace both with a single helper, `overwriteControlledConfig`, applied
to  the fully assembled config map so that an override is caught in one
place whichever prefix supplied it, and split the config sets by intent:
`DEFAULT_*` holds defaults the user may still override, `CONTROLLED_*`
holds  values the user cannot. The `_EOS_ONLY` maps carry only what
exactly-once  adds and are applied on top of their counterparts.

This closes two gaps. `group.id` and `partition.assignment.strategy` are
documented as controlled by Streams but produced no log line, because
both are forced with a put() after the merge. The per-client prefixes
were only checked against the non-exactly-once set, so
`restore.consumer.isolation.level=read_uncommitted` gave a restore
consumer reading uncommitted records under exactly-once; it now yields
`read_committed`.

Warnings are now all logged at `WARN`, where the non-exactly-once set
was  previously logged at `ERROR`, and a config that is only controlled
under  exactly-once names the processing guarantee as the reason.

A value that differs from the Streams value only in type, such as
`Boolean.FALSE` where Streams sets `"false"`, no longer warns that it is
being replaced by an identical value.
`max.in.flight.requests.per.connection` is a producer config and is now
validated only there, so a value supplied under a consumer prefix is no
longer rejected.

Reviewers: Nikita Shupletsov <nikita@shupletsov.ca>, Lucas Brutschy
<lbr